[tool.poetry]
name = "lightningd-plugins"
version = "0.1.0"
description = "Plugin test runner"
authors = ["Christian Decker <decker.christian@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
virtualenv = "^20.25.0"
ruff = "^0.5.0"

[tool.poetry.dev-dependencies]

[tool.ruff]
include = ["pyproject.toml", ".ci/**/*.py", "backup/**/*.py", 
    "clearnet/**/*.py", "currencyrate/**/*.py", "datastore/**/*.py", 
    "donations/**/*.py", "feeadjuster/**/*.py", "monitor/**/*.py",
    "persistent-channels/**/*.py", "rebalance/**/*.py", 
    "sauron/**/*.py", "zmq/**/*.py", "sitecustomize.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
