[project]
name = "lightningd-plugins"
version = "0.1.0"
description = "Plugins repo meta dependencies"
authors = [{ name = "Christian Decker", email = "decker.christian@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"

[dependency-groups]
dev = ["ruff>=0.15"]

[tool.uv]
package = false

[tool.ruff]
include = [
    "pyproject.toml",
    ".ci/**/*.py",
    "backup/**/*.py",
    "cl-zmq/**/*.py",
    "clearnet/**/*.py",
    "currencyrate/**/*.py",
    "donations/**/*.py",
    "feeadjuster/**/*.py",
    "historian/**/*.py",
    "monitor/**/*.py",
    "persistent-channels/**/*.py",
    "prometheus/**/*.py",
    "rebalance/**/*.py",
    "sauron/**/*.py",
    "summary/**/*.py",
    "sitecustomize.py",
]
