[project]
name = "cln-backup"
version = "0.1.0"
description = "Keep your Core-Lightning node save by backing it up, in real-time (allows recovering without channel closures)."
authors = [{ name = "Christian Decker", email = "<decker@blockstream.io>" }]
requires-python = ">=3.9.2"

[dependency-groups]
dev = [
    "pyln-testing>=25.2.2",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.1.0",
    "flaky>=3.7.0",
]
