[project]
name = "cln-backup"
version = "0.1.0"
description = "Keep your Core-Lightning node save by backing it up, in real-time (allows recovering without channel closures)."
authors = [{ name = "Christian Decker", email = "<decker@blockstream.io>" }]
requires-python = ">=3.9.2"

dependencies = [
    "pyln-client>=25.2.2",
    "click>=8.0.4",
    "psutil>=5.9.4",
    "requests[socks]>=2.32.4",
]

[dependency-groups]
dev = [
    "pyln-testing>=25.2.2",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.1.0",
    "pytest-asyncio>=0.23.8,<2",
    "flaky>=3.7.0",
    "asysocks<0.3",
]
