[project]
name = "zmq"
version = "0.1.0"
description = "Forwards notifications to ZeroMQ endpoints depending on configuration"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["Twisted>=20.3.0", "txzmq==0.8.2", "pyln-client>=25.9.3"]

[dependency-groups]
dev = [
    "pytest>=7.4,<9",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=25.9.3",
    "pyln-client>=25.9.3",
    "pyln-proto>=25.9.3",
]
