[project]
name = "currencyrate"
version = "0.1.0"
description = "Provides Bitcoin currency conversion functions using various different backends"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "cachetools>=5.3.3",
    "pyln-client>=25.9.3",
    "requests[socks]>=2.32.2",
    "urllib3>=2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4,<9",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=25.9.3",
    "pyln-client>=25.9.3",
    "pyln-proto>=25.9.3",
]
