[project]
name = "currencyrate"
version = "0.1.0"
description = "Provides Bitcoin currency conversion functions using various different backends"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "cachetools>=7.1.1",
    "pyln-client>=26.4.1",
    "requests[socks]>=2.33.1",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=26.4.1",
    "pyln-client>=26.4.1",
    "pyln-proto>=26.4.1",
]
