[tool.poetry]
name = "datastore"
version = "0.1.0"
description = ""
authors = ["Christian Decker <decker.christian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyln-client = ">=0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
