[tool.poetry]
name = "cln-plugins-donations"
version = "0.2.0"
description = ""
authors = ["Christian Decker <decker.christian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
qrcode = "7.4.2"
flask = "2.3.3"
pyln-client = ">=24.2"
flask-bootstrap = "^3.3.7.1"
flask-wtf = "1.2.1"
werkzeug = "3.0.6"
wtforms = "3.1.2"

[tool.poetry.dev-dependencies]
pyln-testing = ">=24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
