[project]
name = "cln-plugins-donations"
version = "0.2.0"
description = "Start one or more webservers for a donation page where visitors can let CLN generate invoices"
authors = [{ name = "Christian Decker", email = "<decker@blockstream.io>" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "qrcode[pil]>=8.2",
    "flask>=2.3.3",
    "pyln-client>=26.4.1",
    "flask-bootstrap>=3.3.7.1",
    "flask-wtf>=1.3.0",
    "werkzeug>=3.0.6",
    "wtforms>=3.2.2",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=26.4.1",
    "pyln-client>=26.4.1",
    "pyln-proto>=26.4.1",
    "requests>=2.32.5",
]
