[tool.poetry]
name = "cln-drain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyln-client = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-timeout = "^2.1.0"
flaky = "^3.7.0"
pyln-testing = "^0.12.0"
grpcio = "^1.49.0"
protobuf = "^4.21.6"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
