[project]
name = "historian"
version = "0.1.0"
description = "A plugin to store historical Lightning Network gossip in a database."
readme = "README.md"
authors = [{ name = "Christian Decker", email = "<decker@blockstream.io>" }]
license = "MIT"
requires-python = ">=3.9.2"

dependencies = [
    "inotify>=0.2.12",
    "pika>=1.3.2",
    "pyln-client>=24.2",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "pyln-testing>=24.2",
    "pytest-rerunfailures>=10.3",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.1.0",
]
