[project]
name = "historian"
version = "0.1.0"
description = "A plugin to store historical Lightning Network gossip in a database."
readme = "README.md"
authors = [{ name = "Christian Decker", email = "<decker@blockstream.io>" }]
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "inotify>=0.2.12",
    "pika>=1.4.1",
    "pyln-client>=25.9.3",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pyln-testing>=25.9.3",
    "pytest-rerunfailures>=16.4",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.1.0",
]
