[project]
name = "monitor"
version = "0.1.0"
description = "Monitors the health of your peers and helps you to decide if you might want to close a channel"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["pyln-client>=25.9.3", "packaging>=24.1"]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=25.9.3",
    "pyln-client>=25.9.3",
    "pyln-proto>=25.9.3",
]
