[tool.poetry]
name = "cln-noise"
version = "0.1.0"
description = ""
authors = ["Christian Decker <decker.christian@gmail.com>"]
license = "BSD"
readme = "README.org"
packages = [{include = "noise.py"}]

[tool.poetry.dependencies]
python = "^3.7"
pyln-client = "^0.12.0"
bitstring = "^3.1.9"
Flask = ">=2"


[tool.poetry.group.dev.dependencies]
pyln-testing = "^0.12.0"
pytest = "^7.1.3"
pytest-timeout = "^2.1.0"
grpcio = "^1.49.0"
protobuf = "^4.21.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
