[tool.poetry]
name = "cln-paytest"
version = "0.1.0"
description = "A plugin to test how well payments perform"
authors = ["Christian Decker <decker.christian@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyln-client = ">=0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
