[project]
name = "persistent-channels"
version = "0.1.0"
description = "Describe a number of channels you'd like to have open at any time"
readme = "README.md"
requires-python = ">=3.9.2"

dependencies = ["pyln-client>=24.11"]

[dependency-groups]
dev = [
    "pytest>=7.4,<9",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=24.11.1",
    "pyln-client>=24.11.1",
    "pyln-proto>=24.11.1",
]
