[project]
name = "prometheus"
version = "0.1.0"
description = "A plugin that reports metrics to be collected by prometheus"
readme = "README.md"
authors = [{ name = "Christian Decker", email = "<decker@blockstream.io>" }]
license = "MIT"
requires-python = ">=3.10"

dependencies = ["prometheus-client>=0.25.0", "pyln-client>=25.9.3"]

[dependency-groups]
dev = [
    "pyln-testing>=25.9.3",
    "pytest-rerunfailures>=16.2",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.1.0",
]
