[project]
name = "sauron"
version = "0.1.0"
description = "A Bitcoin backend plugin relying on Esplora"
readme = "README.md"
requires-python = ">=3.9.2"

dependencies = ["pyln-client>=24.11", "portalocker>=3.2,<4"]

[dependency-groups]
dev = [
    "pytest>=7.4,<9",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=24.11.1",
    "pyln-client>=24.11.1",
    "pyln-proto>=24.11.1",
]
