[project]
name = "sauron"
version = "0.1.0"
description = "A Bitcoin backend plugin relying on Esplora"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["pyln-client>=25.9.3", "requests[socks]>=2.23.0"]

[dependency-groups]
dev = [
    "pytest>=7.4,<9",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=25.9.3",
    "pyln-client>=25.9.3",
    "pyln-proto>=25.9.3",
]
