[project]
name = "summary"
version = "0.1.0"
description = "Show a summary of your node, including fiat amounts"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pyln-client>=25.9.3",
    "requests[socks]>=2.34.0",
    "packaging>=26.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=25.9.3",
    "pyln-client>=25.9.3",
    "pyln-proto>=25.9.3",
]
