[project]
name = "reckless-testing"
version = "0.1.0"
description = "A little helper for testing reckless installs of plugins"
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=7.4,<9",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=25.5",
    "pyln-client>=25.5",
    "pyln-proto>=25.5",
]
