[project]
name = "reckless-testing"
version = "0.1.0"
description = "A little helper for testing reckless installs of plugins"
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=25.9.3",
    "pyln-client>=25.9.3",
    "pyln-proto>=25.9.3",
]

[tool.uv.sources]
pyln-testing = { path = "../../../lightning/contrib/pyln-testing", editable = true }
pyln-client = { path = "../../../lightning/contrib/pyln-client", editable = true }
pyln-proto = { path = "../../../lightning/contrib/pyln-proto", editable = true }
