[tool.poetry]
name = "cln-historian"
version = "0.1.0"
description = "A plugin to store historical Lightning Network gossip in a database."
authors = ["Christian Decker <decker@blockstream.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyln-client = ">=24.2"
sqlalchemy = "^2.0.40"
python-dotenv = "^1.1.0"
inotify = "^0.2.10"

[tool.poetry.group.dev.dependencies]
pyln-testing = ">=24.2"
pytest-timeout = "^2.1.0"
pytest-rerunfailures = "^10.3"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
